# spurdify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README-spurdo.md  README.md  RELEASENOTES.md  azure-pipelines.yml  build.rs  config.nims  main.nim  shard.yml  spurdify.nim  spurdify.nimble
.github/workflows/: release.yml
spec/: spec_helper.cr  spurdify_spec.cr
src/: lib.rs  main.rs  spurdify.cr  spurdify.nim
src/spurdify/: cli.nim  version.cr
