[package]
name = "spurdify"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Sandberg <jeff@pdx.su"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.3"
regex = "1"
rand = "0.8"
lazy_static = "1.4.0"
atty = "0.2.14"
aho-corasick = "0.7"
