[package]
name = "spurdify"
version = "0.1.1"
edition = "2021"
authors = ["Jeff Sandberg <jeff@pdx.su"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.3"
regex = "1.5.5"
rand = "0.8"
lazy_static = "1.4.0"
aho-corasick = "0.7"
